<resources>
    <string name="app_name">PiLexa</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_host">Host Address</string>
    <string name="pref_default_host">http://cssgate.insttech.washington.edu/~viveret/pi/index.php</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_send_msg">Send message...</string>
    <string name="default_port">11823</string>
    <string name="hint_default_port">Port (empty for default)</string>
    <string name="syncing_data_in_progress">Syncing data...</string>
    <string name="welcome_title">Welcome to the PiLexa app!</string>
    <string name="welcome_description">This will guide you through configuring your pilexa. Make sure your pilexa is plugging in and online before continuing.\n\nYou may select easy mode, which will help you configure your pilexa, or manual, where you can specify things manually.</string>
    <string name="manual">Manual</string>
    <string name="easy">Easy</string>
    <string name="find_pilexa_title">Select a pilexa service on your local network:</string>
    <string name="searching">Searching... (This may take a minute)</string>
    <string name="prompt_username">Username:</string>
    <string name="prompt_password">Password:</string>
    <string name="submit">Submit</string>
    <string name="PREF_USER_ID">userId</string>
    <string name="done_message">Done!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="action_logout">Logout</string>
    <string name="prompt_host">Host address:</string>
    <string name="prompt_port">Port:</string>
    <string name="port_hint">(leave empty for default)</string>
    <string name="action_forget_conn">Forget Connection</string>
    <string name="action_clear_msgs">Clear Messages</string>
</resources>
